Update gradle to 9.2.1 and use java 25